Correccion de nombre app

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "JanKenUP! Card",
-    "short_name": "Humita Games",
+    "short_name": "JanKenCard!",
     "start_url": "index.html",
     "display": "standalone",
     "background_color": "#255e7d",
